    - debian/patches/hurd-i386/cvs-libpthread.so.diff: drop, upstreamed.
    - debian/patches/mips/submitted-vfork.diff: drop, upstreamed.
    - debian/patches/sparc/submitted-vfork.diff: drop, upstreamed.
  * debian/rules.d/build.mk: reduce TIMEOUTFACTOR to 15 from 50. That
    corresponds to a 5 minutes default, which should be more than enough even
    on slow architectures.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 14 Apr 2016 15:08:27 +0200

glibc (2.23-0experimental2) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.
  * patches/kfreebsd/local-fbtl.diff: update to revision 5973 (from
    glibc-bsd).
  * debian/rules, debian/rules.d/build.mk: rename localedir into complocaledir
    following upstream change.
  * debian/patches/local-allocalim-header.diff: drop, obsolete.
  * debian/patches/any/local-no-pagesize.diff: drop, obsolete.

  [ Adam Conrad ]
  * debian/testsuite-xfail-debian.mk: Also allow tst-malloc-thread-fail to
    fail where we've already done so for test-xfail-tst-malloc-thread-exit.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 14 Apr 2016 14:20:30 +0200

glibc (2.23-0experimental1) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.
  * debian/testsuite-xfail-debian.mk (powerpc) really mark
    tst-malloc-thread-exit as xfail.
  * debian/testsuite-xfail-debian.mk (ppc64) mark tst-malloc-thread-exit
    test as xfail, it is a known issue and not a regression.
  * patches/kfreebsd/local-fbtl.diff: update to revision 5969 (from
    glibc-bsd).
  * debian/patches/kfreebsd/local-tst-malloc-fbtl.diff: drop, obsoleted by
    hurd-i386/cvs-libpthread.so.diff.
  * debian/patches/kfreebsd/local-tst-unique.diff: disable tst-unique* on
    GNU/kFreeBSD, as they are not supported by the FreeBSD ELF OSABI.
  * debian/patches/alpha/submitted-fts64.diff: new patch to fix the new fts64
    function on alpha.
