@@ -9,6 +9,8 @@ glibc (2.23-0experimental3) UNRELEASED; urgency=medium
   * debian/rules.d/build.mk: reduce TIMEOUTFACTOR to 15 from 50. That
     corresponds to a 5 minutes default, which should be more than enough even
     on slow architectures.
+  * debian/sysdeps/mips64el.mk: change the ISA back to MIPS3 to fix math FMA
+    tests on some CPUs.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 14 Apr 2016 15:08:27 +0200
 
